3 page, pagination add

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body-bcg">
     <header class="header">
         <div class="header__title">
-            Movie-App
+            <a href="" class="header__title-el">Movie-App</a>
         </div>
         <div class="header__links">
             <a class="header__link header__links-top250">250 лучших фильмов</a>
@@ -103,11 +103,11 @@
 
     </div>
     <div class="pagination container">
-        <a class="pagination__el pagination__el-1" data-pagination="1">1</a>
-        <a class="pagination__el pagination__el-2" data-pagination="2">2</a>
-        <a class="pagination__el pagination__el-3" data-pagination="3">3</a>
-        <a class="pagination__el pagination__el-4" data-pagination="4">4</a>
-        <a class="pagination__el pagination__el-5" data-pagination="5">5</a>
+        <!-- <a href="#top" class="pagination__el pagination__el-1" data-pagination="1">1</a>
+        <a href="#top" class="pagination__el pagination__el-2" data-pagination="2">2</a>
+        <a href="#top" class="pagination__el pagination__el-3" data-pagination="3">3</a>
+        <a href="#top" class="pagination__el pagination__el-4" data-pagination="4">4</a>
+        <a href="#top" class="pagination__el pagination__el-5" data-pagination="5">5</a> -->
     </div>
     <script src="main.js"></script>
 </body>
